--- a/system/config/templates/features/aca_individual_market/financial_assistance.yml
+++ b/system/config/templates/features/aca_individual_market/financial_assistance.yml
@@ -13,16 +13,16 @@ registry:
         item: :ivl_application_checklist
         settings:
           - key: :file_location
-            item: 'db/documents/ivl_checklist.pdf'
+            item: 'db/documents/ivl_checklist_me.pdf'
       - key: :iap_year_selection
-        is_enabled: <%= ENV['IAP_YEAR_SELECTION_IS_ENABLED'] || false %>
+        is_enabled: <%= ENV['IAP_YEAR_SELECTION_IS_ENABLED'] || true %>
       - key: :iap_year_selection_form
         is_enabled: <%= ENV['IAP_YEAR_SELECTION_FORM_IS_ENABLED'] || false %>
         settings:
           - key: :iap_year_sep_link
-            item: ""
+            item: "https://www.coverme.gov/learn-more/special-enrollment-periods"
       - key: :iap_assistance_year_display
-        is_enabled: <%= ENV['IAP_ASSISTANCE_YEAR_DISPLAY_IS_ENABLED'] || false %>
+        is_enabled: <%= ENV['IAP_ASSISTANCE_YEAR_DISPLAY_IS_ENABLED'] || true %>
       - key: :enrollment_dates
         item: :enrollment_dates
         is_enabled: <%= ENV['ENROLLMENT_DATES_IS_ENABLED'] || true %>
@@ -42,7 +42,7 @@ registry:
             is_enabled: true
       - key: :faa_fifteenth_of_the_month_rule_overridden
         item: :faa_fifteenth_of_the_month_rule_overridden
-        is_enabled: false
+        is_enabled: true
       - key: :benchmark_plans
         item: :benchmark_plans
         is_enabled: true
@@ -73,56 +73,56 @@ registry:
       - key: :transfer_history_page
         item: :transfer_history_page
         is_enabled: <%= ENV['TRANSFER_HISTORY_PAGE_IS_ENABLED'] || false %>
-      - key: :divorce_agreement_year
-        item: :divorce_agreement_year
-        is_enabled: <%= ENV['DIVORCE_AGREEMENT_YEAR_TOOLTIP_IS_ENABLED'] || false %>
-      - key: :medicaid_tax_credits_link
-        item: :medicaid_tax_credits_link
-        is_enabled: true
       - key: :application_submission_error_status
         item: :application_submission_error_status
         is_enabled: <%= ENV['APPLICATION_SUBMISSION_ERROR_STATUS_IS_ENABLED'] || false %>
       - key: :filtered_application_list
         item: :filtered_application_list
         is_enabled: <%= ENV['FILTERED_APPLICATION_LIST_IS_ENABLED'] || false %>
+      - key: :divorce_agreement_year
+        item: :divorce_agreement_year
+        is_enabled: <%= ENV['DIVORCE_AGREEMENT_YEAR_TOOLTIP_IS_ENABLED'] || false %>
+      - key: :medicaid_tax_credits_link
+        item: :medicaid_tax_credits_link
+        is_enabled: false
+      - key: :primary_caregiver_other_question
+        item: :primary_caregiver_other_question
+        is_enabled: true
+      - key: :primary_caregiver_relationship_other_question
+        item: :primary_caregiver_relationship_other_question
+        is_enabled: <%= ENV['PRIMARY_CAREGIVER_RELATIONSHIP_OTHER_QUESTION_IS_ENABLED'] || false %>
       - key: :featured_tribes_selection
         item: :featured_tribes_selection
         is_enabled: <%= ENV['FEATURED_TRIBES_IS_ENABLED'] || false %>
         settings:
         - key: :featured_tribes
-          item: []
+          item: [["Maliseet", "HM"], ["Passamaquoddy", "PD"], ["Penobscot", "PE"], ["Micmac", "AM"], ["Other", "OT"]]
       - key: :tribes_information_raw_review
         item: :tribes_information_raw_review
         is_enabled: <%= ENV['TRIBES_INFORMATION_RAW_REVIEW_IS_ENABLED'] || false %>
       - key: :american_indian_alaskan_native_income
         item: :american_indian_alaskan_native_income
-        is_enabled: false
+        is_enabled: true
       - key: :indian_health_service_question
-        is_enabled: false
+        is_enabled: true
       - key: :mainecare_healthcare_questions
         is_enabled: true
       - key: :immigration_status_question_required
-        is_enabled: true
-      - key: :primary_caregiver_other_question
-        item: :primary_caregiver_other_question
-        is_enabled: false
-      - key: :primary_caregiver_relationship_other_question
-        item: :primary_caregiver_relationship_other_question
         is_enabled: false
       - key: :mec_check
-        is_enabled: <%= ENV['MEC_CHECK_IS_ENABLED'] || false %>
+        is_enabled: <%= ENV['MEC_CHECK_IS_ENABLED'] || true %>
       - key: :shop_coverage_check
         is_enabled: <%= ENV['SHOP_COVERAGE_CHECK_IS_ENABLED'] || false %>
       - key: :coverage_check_banners
-        is_enabled: <%= ENV['COVERAGE_CHECK_BANNERS_IS_ENABLED'] || true %>
+        is_enabled: <%= ENV['COVERAGE_CHECK_BANNERS_IS_ENABLED'] || false %>
       - key: :include_faa_outstanding_verifications
         is_enabled: true
       - key: :skip_aptc_families_from_document_reminder_notices
-        is_enabled: true
-      - key: :non_applicant_citizen_status
         is_enabled: false
-      - key: :out_of_state_primary
+      - key: :non_applicant_citizen_status
         is_enabled: true
+      - key: :out_of_state_primary
+        is_enabled: false
       - key: :temporary_configuration_enable_multi_tax_household_feature
         is_enabled: <%= ENV['TEMPORARY_CONFIGURATION_OF_MULTI_TAX_HOUSEHOLD_FEATURE_IS_ENABLED'] || false %>
       - key: :draft_application_after_ridp
@@ -137,6 +137,9 @@ registry:
       - key: :short_enrolled_esi_forms
         item: :short_enrolled_esi_forms
         is_enabled: <%= ENV['SHORT_ENROLLED_ESI_IS_ENABLED'] || false %>
+      - key: :totally_ineligible_notice
+        item: :totally_ineligible_notice
+        is_enabled: <%= ENV['TOTALLY_INELIGIBLE_NOTICE_IS_ENABLED'] || false %>
   - namespace:
     - :request_determination
     features:
@@ -156,25 +159,25 @@ registry:
     - key: :real_time_transfer
       is_enabled: <%= ENV['REAL_TIME_TRANSFER_IS_ENABLED'] || false %>
     - key: :batch_transfer
-      is_enabled: <%= ENV['BATCH_TRANSFER_IS_ENABLED'] || false %>
+      is_enabled: <%= ENV['BATCH_TRANSFER_IS_ENABLED'] || true %>
     - key: :transfer_service
-      is_enabled: <%= ENV['TRANSFER_SERVICE_IS_ENABLED'] || false %>
-      item: "curam"
+      is_enabled: <%= ENV['TRANSFER_SERVICE_IS_ENABLED'] || true %>
+      item: "aces"
     - key: :non_magi_transfer
       is_enabled: <%= ENV['NON_MAGI_TRANSFER_IS_ENABLED'] || false %>
     - key: :block_renewal_application_transfers
       is_enabled: <%= ENV['ATP_ON_RENEWALS_IS_ENABLED'] || false %>
     - key: :load_county_on_inbound_transfer
-      is_enabled: <%= ENV['LOAD_COUNTY_ON_INBOUND_TRANSFER_IS_ENABLED'] || false %>
+      is_enabled: <%= ENV['LOAD_COUNTY_ON_INBOUND_TRANSFER_IS_ENABLED'] || true %>
     - key: :automatic_submission
       is_enabled: <%= ENV['AUTOMATIC_SUBMISSION_IS_ENABLED'] || false %>
   - namespace:
     - :documents
     features:
       - key: :consumer_validations
-        is_enabled: false
+        is_enabled: true
       - key: :non_magi_referral_display
-        is_enabled: false
+        is_enabled: true
   - namespace:
     - :questions
     features:
@@ -182,33 +185,33 @@ registry:
       is_enabled: true
       settings:
         - key: :currently_enrolled
-          item: true
-        - key: :currently_enrolled_with_hra
           item: false
+        - key: :currently_enrolled_with_hra
+          item: true
     - key: :has_eligible_health_coverage
       is_enabled: true
       settings:
         - key: :currently_eligible
-          item: true
-        - key: :currently_eligible_with_hra
           item: false
+        - key: :currently_eligible_with_hra
+          item: true
     - key: :has_medicare_cubcare_eligible
-      is_enabled: false
+      is_enabled: true
     - key: :medicaid_chip_driver_questions
-      is_enabled: false
+      is_enabled: true
       settings:
         - key: :medicaid_chip
           item: "Medicaid"
     - key: :net_annual_income_display
-      is_enabled: false
+      is_enabled: true
     - key: :has_dependent_with_coverage
-      is_enabled: false
+      is_enabled: true
     - key: :private_individual_and_family_coverage
       is_enabled: true
     - key: :acf_refugee_medical_assistance
-      is_enabled: true
+      is_enabled: false
     - key: :americorps_health_benefits
-      is_enabled: true
+      is_enabled: false
     - key: :child_health_insurance_plan
       is_enabled: true
     - key: :medicaid
@@ -216,52 +219,52 @@ registry:
     - key: :medicare
       is_enabled: true
     - key: :medicare_advantage
-      is_enabled: true
+      is_enabled: false
     - key: :medicare_part_b
-      is_enabled: true
+      is_enabled: false
     - key: :state_supplementary_payment
-      is_enabled: true
+      is_enabled: false
     - key: :tricare
       is_enabled: true
     - key: :veterans_benefits
-      is_enabled: true
+      is_enabled: false
     - key: :naf_health_benefit_program
-      is_enabled: true
+      is_enabled: false
     - key: :health_care_for_peace_corp_volunteers
-      is_enabled: true
+      is_enabled: false
     - key: :department_of_defense_non_appropriated_health_benefits
-      is_enabled: true
+      is_enabled: false
     - key: :cobra_benefit_fa
       is_enabled: true
     - key: :employer_sponsored_insurance
       is_enabled: true
     - key: :self_funded_student_health_coverage
-      is_enabled: true
+      is_enabled: false
     - key: :foreign_government_health_coverage
-      is_enabled: true
+      is_enabled: false
     - key: :private_health_insurance_plan
-      is_enabled: true
+      is_enabled: false
     - key: :coverage_obtained_through_another_exchange
       is_enabled: true
     - key: :coverage_under_the_state_health_benefits_risk_pool
-      is_enabled: true
+      is_enabled: false
     - key: :veterans_administration_health_benefits
       is_enabled: true
     - key: :peace_corps_health_benefits
       is_enabled: true
     - key: :health_reimbursement_arrangement # new
-      is_enabled: false
+      is_enabled: true
     - key: :retiree_health_benefits # new
-      is_enabled: false
+      is_enabled: true
     - key: :other_full_benefit_coverage # new
-      is_enabled: false
+      is_enabled: true
     - key: :other_limited_benefit_coverage # new
-      is_enabled: false
+      is_enabled: true
     - key: :prize_and_awards
       is_enabled: true
       settings:
         - key: :gamble_prize
-          item: false
+          item: true
     - key: :full_medicaid_determination_step
       is_enabled: true
       settings:
@@ -269,45 +272,45 @@ registry:
           item: <%= ENV['FULL_MEDICAID_DETERMINATION_FOR_ANNUAL_ELIGIBILITY_REDETERMINATION_IS_ENABLED'] || false %>
     - key: :native_american_csr
       is_enabled: true
-    - key: :filing_as_head_of_household
-      is_enabled: false
-    - key: :no_coverage_tribe_details
-      is_enabled: false
     - key: :display_medicaid_question
       item: :display_medicaid_question
       is_enabled: false
     - key: :optional_document_fields
       item: :optional_document_fields
-      is_enabled: false
+      is_enabled: true
     - key: :disable_employer_address_fields
       item: :disable_employer_address_fields
-      is_enabled: false
+      is_enabled: true
     - key: :fa_send_to_external_verification
-      is_enabled: false
+      is_enabled: true
     - key: :medicaid_or_chip_program_short_name
       is_enabled: true
       settings:
         - key: :name
-          item: 'Medicaid'
+          item: "MaineCare or Cub Care"
     - key: :medicaid_or_chip_agency_long_name
       is_enabled: true
       settings:
         - key: :name
-          item: 'DHS'
+          item: 'Office for Family Independence'
     - key: :student_follow_up_questions
+      is_enabled: false
+    - key: :filing_as_head_of_household
+      is_enabled: true
+    - key: :no_coverage_tribe_details
       is_enabled: true
     - key: :pregnancy_due_on_required
-      is_enabled: true
+      is_enabled: false
     - key: :post_partum_period_one_year
       is_enabled:  <%= ENV['POST_PARTUM_PERIOD_ONE_YEAR_IS_ENABLED'] || false %>
     - key: :voter_registration_through_ext_url
-      is_enabled: false
+      is_enabled: true
     - key: :voter_registration_through_hbx
-      is_enabled: true
+      is_enabled: false
     - key: :question_required
-      is_enabled: true
+      is_enabled: false
     - key: :is_enrolled_on_medicaid
-      is_enabled: true
+      is_enabled: false
     - key: :no_ssn_reason_dropdown
       is_enabled: <%= ENV['NO_SSN_DROPDOWN_IS_ENABLED'] || false %>
   - namespace:
@@ -321,18 +324,18 @@ registry:
         - key: :renewals_creation_day
           item: <%= ENV['RENEWALS_CREATION_DAY'] || 16 %>
     - key: :skip_employer_address_validation
-      is_enabled: :false
+      is_enabled: :true
     - key: :skip_employer_phone_validation
-      is_enabled: :false
+      is_enabled: :true
     - key: :skip_employer_id_validation
-      is_enabled: :false
+      is_enabled: :true
     - key: :negative_amount_income_types
       is_enabled: true
       settings:
         - key: :income_types
-          item: ["net_self_employment", "capital_gains", "farming_and_fishing"]
+          item: ["net_self_employment", "capital_gains", "farming_and_fishing", "rental_and_royalty", "other"]
     - key: :skip_zero_income_amount_validation
-      is_enabled: :false
+      is_enabled: :true
     - key: :income_and_deduction_date_warning
       item: :income_and_deduction_date_warning
       is_enabled: <%= ENV['INCOME_AND_DEDUCTION_DATE_WARNING_IS_ENABLED'] || false %>
