--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -50,7 +50,7 @@ registry:
             item: 0.85
       - key: :cancel_renewals_for_term
         item: Operations::Individual::CancelRenewalEnrollment.new
-        is_enabled: true
+        is_enabled: <%= ENV['CANCEL_RENEWALS_FOR_TERM_IS_ENABLED'] || false %>
       - key: :calculate_monthly_aggregate
         item: Operations::Individual::CalculateMonthlyAggregate.new
         is_enabled: <%= ENV['CALCULATE_MONTHLY_AGGREGATE_IS_ENABLED'] || true %>
