--- a/system/config/templates/features/aca_shop_market/shop_osse_eligibilities.yml
+++ b/system/config/templates/features/aca_shop_market/shop_osse_eligibilities.yml
@@ -64,13 +64,13 @@ registry:
         is_enabled: true
       - key: :all_contribution_levels_min_met_relaxed_2022
         item: 'all_contribution_levels_min_met'
-        is_enabled: false
+        is_enabled: true
       - key: :benefit_application_fte_count_relaxed_2022
         item: 'benefit_application_fte_count'
-        is_enabled: false
+        is_enabled: true
       - key: :employer_metal_level_products_restricted_2022
         item: 'employer_metal_level_products'
-        is_enabled: false
+        is_enabled: true
       - key: :lowest_cost_silver_product_2022
         item: '94506DC0350030-01'
         is_enabled: true
