--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches:
       - 'trunk'
+      - '185545425_shop_end_to_end'
   pull_request:
     branches:
       - 'trunk'
+      - '185545425_shop_end_to_end'
 
 concurrency:
   group: docker-${{ github.ref }}
