--- a/config/client_config/me/system/config/templates/features/aca_shop_market/shop_osse_eligibilities.yml
+++ b/config/client_config/me/system/config/templates/features/aca_shop_market/shop_osse_eligibilities.yml
@@ -118,5 +118,5 @@ registry:
         item: 'employer_metal_level_products'
         is_enabled: true
       - key: :lowest_cost_silver_product_2024
-        item: '94506DC0350033-01'
-        is_enabled: <%= ENV['SHOP_OSSE_ELIGIBILITY_2024_IS_ENABLED'] || false %>
+        item: '94506DC0350032-01'
+        is_enabled: true
