--- a/config/client_config/me/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/config/client_config/me/system/config/templates/features/enroll_app/enroll_app.yml
@@ -364,6 +364,9 @@ registry:
       - key: :adtl_contact_required_for_text
         item: :adtl_contact_required_for_text
         is_enabled: <%= ENV['ADTL_CONTACT_REQUIRED_FOR_TEXT_IS_ENABLED'] || false %>
+      - key: :ssn_ui_validation
+        item: :ssn_ui_validation
+        is_enabled: <%= ENV['SSN_UI_VALIDATION_IS_ENABLED'] || false %>
       - key: :counties_import
         is_enabled: true
         item: 'SHOP_ZipCode_CY2021_FINAL_ME.xlsx'
