--- a/config/client_config/me/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/config/client_config/me/system/config/templates/features/enroll_app/enroll_app.yml
@@ -400,6 +400,9 @@ registry:
             item: 1
           - key: :ivl_enrollment_renewal_begin_effective_month
             item: 11
+      - key: :ivl_enrollment_renewal_async
+        item: :ivl_enrollment_renewal_async
+        is_enabled: false
       - key: :exclude_child_only_offering
         item: :exclude_child_only_offering
         is_enabled: true
