--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -395,6 +395,9 @@ registry:
             item: 1
           - key: :ivl_enrollment_renewal_begin_effective_month
             item: <%= ENV['IVL_ENROLLMENT_RENEWAL_BEGIN_EFFECTIVE_MONTH'] || 11 %>
+      - key: :ivl_enrollment_renewal_async
+        item: :ivl_enrollment_renewal_async
+        is_enabled: true
       - key: :exclude_child_only_offering
         item: :exclude_child_only_offering
         is_enabled: false
