--- a/config/settings.yml
+++ b/config/settings.yml
@@ -262,7 +262,7 @@ aptc_errors:
 #   ShopPlanYearPublishedDueDayOfMonth = ShopOpenEnrollmentBeginDueDayOfMonth
 style:
   primary_orange: '#333333'
-  brand_primary: '#007bc4'
+  brand_primary: '#0071b3'
   primary_color: '#007bc4'
   primary_notification: '#333333'
   primary_panel: '#69A30D'
