--- a/config/client_config/me/system/config/templates/features/enroll_app/css.yml
+++ b/config/client_config/me/system/config/templates/features/enroll_app/css.yml
@@ -12,12 +12,12 @@ registry:
         is_enabled: true
         settings:
           - key: :color
-            item: '#3B6B90'
+            item: '#007bc4'
       - key: :qle_carousel
         is_enabled: true
         settings:
           - key: :color
-            item: '#3B6B90'
+            item: '#007bc4'
       - key: :ivl_notice_footer
         is_enabled: true
         settings:
