--- a/config/client_config/dc/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/dc/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -122,6 +122,9 @@ registry:
       - key: :families_cv_validation_job
         item: :families_cv_validation_job
         is_enabled: <%= ENV['FAMILIES_CV_VALIDATION_JOB_IS_ENABLED'] || false %>
+      - key: :sensor_tobacco_carrier_usage
+        item: :sensor_tobacco_carrier_usage
+        is_enabled: <%= ENV['SENSOR_TOBACCO_CARRIER_USAGE_IS_ENABLED'] || false %>
   - namespace:
     - :enroll_app
     - :aca_individual_market
