--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -574,13 +574,7 @@ jobs:
           COVERAGE: 'true'
           WD_VERSION: "124.0.6367.207"
           WD_CHROME_PATH: ${{ github.workspace }}/chrome-linux64/chrome
-        run: cucumber_booster --job ${{ matrix.group }}/${{ strategy.job-total }} > output.txt
-      - name: print cucumber errors on summary
-        if: failure()
-        run: |
-          cat output.txt
-          echo "Cucumber ${{ matrix.group }}/${{ strategy.job-total }}" >> $GITHUB_STEP_SUMMARY
-          cat output.txt  | sed -n '/Failing Scenarios/,$p'  >> $GITHUB_STEP_SUMMARY
+        run: cucumber_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
       - name: copy coverage report
         if: (github.event_name == 'push') && (github.ref == 'refs/heads/trunk')
         run: |
